--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-is-keyboard-user",
   "version": "1.0.0",
   "author": "David Bishop",
-  "description": ".",
+  "description": "A lightweight React hook to effortlessly detect keyboard usage.",
   "license": "MIT",
   "keywords": [
     "detect",
@@ -11,18 +11,21 @@
     "accessibility",
     "mouse",
     "react",
-    "hook"
+    "hook",
+    "listener",
+    "ref",
+    "state"
   ],
   "main": "./build/index.js",
   "types": "./build/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dBish6/lodash-debounce-tiny.git"
+    "url": "git+https://github.com/dBish6/react-is-keyboard-user.git"
   },
   "bugs": {
-    "url": "https://github.com/dBish6/lodash-debounce-tiny/issues"
+    "url": "https://github.com/dBish6/react-is-keyboard-user/issues"
   },
-  "homepage": "https://github.com/dBish6/lodash-debounce-tiny#readme",
+  "homepage": "https://github.com/dBish6/react-is-keyboard-user#readme",
   "scripts": {
     "test": "jest",
     "build": "tsc",
